--- a/melee4.html
+++ b/melee4.html
@@ -116,9 +116,9 @@
 			<th>Boss Fight #3</th>
 		</tr>
 		<tr>
-			<td><img id="checklist"src="maxresdefault.jpg" alt="Night"><p>The best course of action for any class is to start building <a href="https://terraria.wiki.gg/wiki/House" target="_blank">houses.</a> Each house is required to have an area of 60 tiles, a table, and a chair. The shape of the house doesn't matter too much though.</p><input type="checkbox"></td>			
-			<td><img id="checklist"src="Corrupt_Desert_Biome.webp" alt="Corruption"><p>After building, learn more about your world. Travel so that you mini-map updates and so that you know how your world is structured.</p><input type="checkbox"></td>
-			<td><img id="checklist" src="Eye_Of_Cthulhu_Fight.jpg" alt="Boss_Fight"><p>Your next priority is simple, mining. Most of your best weapon options will come from the caves, though it can most certainly be dangerous.<br>You can discover many minerals and abandonded houses that can get you many different useful items. You should also remember to upgrade your pickaxe with your resources, some minerals may be harder too mine than others.</p><input type="checkbox"></td>
+			<td><img id="checklist"src="OldUnderworldBG.png" alt="Hell"><p>After your last fight, your next step is to go to the underworld. The underworld is a dangerous place, but it's also where you'll find some of the most powerful items at the moment.</p><input type="checkbox"></td>			
+			<td><img id="checklist"src="Capture-2022-08-09-10_21_23-(2).jpg" alt="Dungeon"><p>After gearing up, your next priority should be taking down your next boss, Skeletron. He is located in the dungeon, though the keeper of the dungeon will tell you to come back when night falls.</p><input type="checkbox"></td>
+			<td><img id="checklist" src="Skeletron.jpg" alt="Boss_Fight4"><p>Skeletron is the third boss you will face, and he is composed of three entities. His head is the main component, though your attacks will be weakened before you take out his hands.</p><input type="checkbox"></td>
 		</tr>	
 	</table>
 </div>	
@@ -128,23 +128,19 @@
 			<th colspan="6"><h2>Notable Items</h2></th>
 		</tr>
 		<tr>
-			<td><img id="nota" src="Platinum_Pickaxe.webp" alt="Platinum_Pickaxe"><img id="nota" src="Gold_Pickaxe.webp" alt="Gold_Pickaxe"><p class="nota">Platinum/Gold Pickaxe</p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Platinum_armor.webp" alt="Platinum_armor"><img id="nota" src="Gold_armor.webp" alt="Gold_armor"><p class="nota">Platinum/Gold Armor</p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Band_of_Regeneration.webp" alt="Band_of_Regeneration"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Band_of_Regeneration" target="_blank">Band of Regeneration</a></p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Hermes_Boots.webp" alt="Hermes_Boots"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Hermes_Boots" target="_blank">Hermes Boots</a></p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Cloud_in_a_Bottle.webp" alt="Cloud_in_a_Bottle"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Cloud_in_a_Bottle" target="_blank">Cloud in a Bottle</a></p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Starfury.webp" alt="Starfury"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Starfury" target="_blank">Starfury</a></p><input class="nota" type="checkbox"></td>			
+			<td><img id="nota" src="Molten_Pickaxe.webp" alt="Molten_Pickaxe"><p>Molten Pickaxe</p><input class="nota" type="checkbox"></td>
+			<td><img id="nota" src="Molten_armor.webp" alt="Molten_armor"><p>Molten Armor</p><input class="nota" type="checkbox"></td>	
+			<td><img id="nota" src="Volcano.png" alt="Volcano"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Volcano" target="_blank">Volcano</a></p><input class="nota" type="checkbox"></td>	
+			<td><img id="nota" src="Obsidian_Skull.webp" alt="Obsidian_Skull"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Obsidian_Skull" target="_blank">Obsidian Skull</a></p><input class="nota" type="checkbox"></td>	
 		</tr>
 		<tr>
 			<th colspan="6"><h2>Crafting</h2></th>
 		</tr>
 		<tr>
-			<td><p>10x Gold/Platinum Bar</p><img id="nota" src="Gold_Bar.webp" alt="gold"><img id="nota" src="Platinum_Bar.webp" alt="platinum"><br><p>4x Wood</p><img id="nota" src="Wood.webp" alt="wood"></td>
-			<td><p>75x Gold/Platinum Bar</p><img id="nota" src="Gold_Bar.webp" alt="gold"><img id="nota" src="Platinum_Bar.webp" alt="platinum"></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Sky Island Chests</p></td>
+			<td><p>20x Hellstone Bar</p><img id="nota" src="Hellstone_Bar.png" alt="hellstone"></td>
+			<td><p>45x Hellstone Bar</p><img id="nota" src="Hellstone_Bar.png" alt="hellstone"></td>
+			<td><p>20x Hellstone Bar</p><img id="nota" src="Hellstone_Bar.png" alt="hellstone"></td>
+			<td><p>20x Obsidian</p><img id="nota" src="Obsidian.webp" alt="obsidian"></td>
 		</tr>				
 	</table>
 	<table>
@@ -152,13 +148,13 @@
 			<th><h2>Notable Items [Expert/Master Mode]</h2></th>
 		</tr>
 		<tr>
-			<td><p>No effect yet.</p></td>
+			<td><img id="nota" src="Bone_Glove.webp" alt="Bone_Glove"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Bone_Glove" target="_blank">Bone Glove</a></p><input class="nota" type="checkbox"></td>
 		</tr>	
 		<tr>
 			<th><h2>Expert Drop</h2></th>
 		</tr>
 		<tr>
-			<td><p>No bosses fought</p></td>
+			<td><img id="npc" src="Skeletron_Head.webp" alt="Skeletron"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Skeletron" target="_blank">Skeletron</a></p><input class="nota" type="checkbox"></td>
 		</tr>		
 	</table>
 </div>
@@ -168,7 +164,7 @@
 			<th><h2>Notable NPCs</h2></th>
 		</tr>
 		<tr>
-			<td><img id="npc" src="Map_Icon_Dryad.webp" alt="Dryad"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Dryad" target="_blank">Dryad</p><input class="nota" type="checkbox"></td>	
+			<td><img id="npc" src="Map_Icon_Goblin_Tinkerer.webp" alt="Goblin Tinkerer"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Goblin_Tinkerer" target="_blank">Goblin Tinkerer</a></p><input class="nota" type="checkbox"></td>	
 		</tr>
 	</table>	
 	<table>
@@ -176,7 +172,7 @@
 			<th colspan="2"><h2>Notable Bosses</h2></th>
 		</tr>
 		<tr>
-			<td><img id="npc" src="Eye_of_Cthulhu_(Phase_1).gif" alt="Eye_of_Cthulhu"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Eye_of_Cthulhu" target="_blank">Eye of Cthulhu</a></p><input class="nota" type="checkbox"></td>
+			<td><img id="npc" src="Skeletron_Head.webp" alt="Skeletron"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Skeletron" target="_blank">Skeletron</a></p><input class="nota" type="checkbox"></td>
 		</tr>
 	</table>
 </div>	
