--- a/melee5.html
+++ b/melee5.html
@@ -27,7 +27,7 @@
     <img id="logo2" src="TTLogo.png"
 	    alt="TTLogo"
 	>
-	<h2 id="welcome">Now that you've gotten a handle on things, it's time for you to fight your first boss!</h2>
+	<h2 id="welcome">Prepare for this carefully, this boss will be like nothing you have faced before.</h2>
 	<p id="welcome">The gear you have obtained and the arena you have created will be very useful, now get out there and win!</p>
   <style>
     table {
@@ -115,8 +115,8 @@
 			<th>Boss Fight #4</th>
 		</tr>
 		<tr>
-			<td><img id="checklist"src="maxresdefault.jpg" alt="Night"><p>The best course of action for any class is to start building <a href="https://terraria.wiki.gg/wiki/House" target="_blank">houses.</a> Each house is required to have an area of 60 tiles, a table, and a chair. The shape of the house doesn't matter too much though.</p><input type="checkbox"></td>			
-			<td><img id="checklist"src="Corrupt_Desert_Biome.webp" alt="Corruption"><p>After building, learn more about your world. Travel so that you mini-map updates and so that you know how your world is structured.</p><input type="checkbox"></td>
+			<td><img id="checklist"src="HellBridge.jpg" alt="Night"><p>To prepare for your next foe, the best precaution I can give is to create a long bridge through the underworld. A lot of this fight will be you running away, so the best way to do that is by giving yourself lots of room to do so.</p><input type="checkbox"></td>			
+			<td><img id="checklist"src="Wall_Of_Flesh2.webp" alt="Wall Of Flesh"><p>After building the bridge, find an imp holding a guide doll. You will need to take the doll from it and throw it into the lava to start the fight.</p><input type="checkbox"></td>
 		</tr>	
 	</table>
 </div>	
@@ -126,37 +126,27 @@
 			<th colspan="6"><h2>Notable Items</h2></th>
 		</tr>
 		<tr>
-			<td><img id="nota" src="Platinum_Pickaxe.webp" alt="Platinum_Pickaxe"><img id="nota" src="Gold_Pickaxe.webp" alt="Gold_Pickaxe"><p class="nota">Platinum/Gold Pickaxe</p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Platinum_armor.webp" alt="Platinum_armor"><img id="nota" src="Gold_armor.webp" alt="Gold_armor"><p class="nota">Platinum/Gold Armor</p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Band_of_Regeneration.webp" alt="Band_of_Regeneration"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Band_of_Regeneration" target="_blank">Band of Regeneration</a></p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Hermes_Boots.webp" alt="Hermes_Boots"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Hermes_Boots" target="_blank">Hermes Boots</a></p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Cloud_in_a_Bottle.webp" alt="Cloud_in_a_Bottle"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Cloud_in_a_Bottle" target="_blank">Cloud in a Bottle</a></p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Starfury.webp" alt="Starfury"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Starfury" target="_blank">Starfury</a></p><input class="nota" type="checkbox"></td>			
+			<td><img id="nota" src="Night's_Edge.webp" alt="Night's_Edge"><p>Night's Edge</p><input class="nota" type="checkbox"></td>
 		</tr>
 		<tr>
 			<th colspan="6"><h2>Crafting</h2></th>
 		</tr>
 		<tr>
-			<td><p>10x Gold/Platinum Bar</p><img id="nota" src="Gold_Bar.webp" alt="gold"><img id="nota" src="Platinum_Bar.webp" alt="platinum"><br><p>4x Wood</p><img id="nota" src="Wood.webp" alt="wood"></td>
-			<td><p>75x Gold/Platinum Bar</p><img id="nota" src="Gold_Bar.webp" alt="gold"><img id="nota" src="Platinum_Bar.webp" alt="platinum"></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Sky Island Chests</p></td>
-		</tr>				
+			<td><p>Volcano</p><img id="nota" src="Volcano.png" alt="Volcano"><p>Muramasa</p><img id="nota" src="Muramasa.webp" alt="Muramasa"><br><p>Blade Of Grass</p><img id="nota" src="Blade_of_Grass.webp" alt="Blade_of_Grass"><p>Light's Bane</p><img id="nota" src="Light's_Bane.webp" alt="Light's_Bane"></td>
+		</tr>
 	</table>
 	<table>
 		<tr>
 			<th><h2>Notable Items [Expert/Master Mode]</h2></th>
 		</tr>
 		<tr>
-			<td><p>No effect yet.</p></td>
+			<td><img id="nota" src="Demon_Heart.webp" alt="Demon_Heart"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Demon_Heart" target="_blank">Demon Heart</a></p><input class="nota" type="checkbox"></td>
 		</tr>	
 		<tr>
 			<th><h2>Expert Drop</h2></th>
 		</tr>
 		<tr>
-			<td><p>No bosses fought</p></td>
+			<td><img id="npc" src="Wall_of_Flesh.gif" alt="Wall of Flesh"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Wall_of_Flesh" target="_blank">Wall of Flesh</a></p><input class="nota" type="checkbox"></td>
 		</tr>		
 	</table>
 </div>
@@ -166,15 +156,18 @@
 			<th><h2>Notable NPCs</h2></th>
 		</tr>
 		<tr>
-			<td><img id="npc" src="Map_Icon_Dryad.webp" alt="Dryad"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Dryad" target="_blank">Dryad</p><input class="nota" type="checkbox"></td>	
+			<td><img id="npc" src="Map_Icon_Guide.webp" alt="Guide"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Guide" target="_blank">Guide</a></p><input class="nota" type="checkbox"></td>	
 		</tr>
 	</table>	
 	<table>
 		<tr>
-			<th colspan="2"><h2>Notable Bosses</h2></th>
+			<th colspan="2"><h2>Notable Enemies/Bosses</h2></th>
 		</tr>
 		<tr>
-			<td><img id="npc" src="Eye_of_Cthulhu_(Phase_1).gif" alt="Eye_of_Cthulhu"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Eye_of_Cthulhu" target="_blank">Eye of Cthulhu</a></p><input class="nota" type="checkbox"></td>
+			<td><img id="npc" src="Voodoo_Demon.gif" alt="Voodoo_Demon"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Voodoo_Demon" target="_blank">Voodoo Demon</a></p><input class="nota" type="checkbox"></td>
+		</tr>		
+		<tr>
+			<td><img id="npc" src="Wall_of_Flesh.gif" alt="Wall_of_Flesh"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Wall_of_Flesh" target="_blank">Wall of Flesh</a></p><input class="nota" type="checkbox"></td>
 		</tr>
 	</table>
 </div>	
