--- a/melee6.html
+++ b/melee6.html
@@ -27,8 +27,8 @@
     <img id="logo2" src="TTLogo.png"
 	    alt="TTLogo"
 	>
-	<h2 id="welcome">Now that you've gotten a handle on things, it's time for you to fight your first boss!</h2>
-	<p id="welcome">The gear you have obtained and the arena you have created will be very useful, now get out there and win!</p>
+	<h2 id="welcome">Congratulations! You've made it successfully past the first half of the game!</h2>
+	<p id="welcome">Though, at this point you might feel like you're back at the beginning. It's smart to prepare fast!</p>
   <style>
     table {
       	border-collapse: collapse;
@@ -116,9 +116,9 @@
 			<th>New Shiny Metals</th>
 		</tr>
 		<tr>
-			<td><img id="checklist"src="maxresdefault.jpg" alt="Night"><p>The best course of action for any class is to start building <a href="https://terraria.wiki.gg/wiki/House" target="_blank">houses.</a> Each house is required to have an area of 60 tiles, a table, and a chair. The shape of the house doesn't matter too much though.</p><input type="checkbox"></td>			
-			<td><img id="checklist"src="Corrupt_Desert_Biome.webp" alt="Corruption"><p>After building, learn more about your world. Travel so that you mini-map updates and so that you know how your world is structured.</p><input type="checkbox"></td>
-			<td><img id="checklist" src="Eye_Of_Cthulhu_Fight.jpg" alt="Boss_Fight"><p>Your next priority is simple, mining. Most of your best weapon options will come from the caves, though it can most certainly be dangerous.<br>You can discover many minerals and abandonded houses that can get you many different useful items. You should also remember to upgrade your pickaxe with your resources, some minerals may be harder too mine than others.</p><input type="checkbox"></td>
+			<td><img id="checklist"src="Player_in_Forest.png" alt="Night"><p>Now that you have come back from the underworld, use your Pwnhammer to destroy some of the Alters in the Evil Biomes. This will be important to obtaining new gear.</p><input type="checkbox"></td>			
+			<td><img id="checklist"src="HallowForest.png" alt="Hallow Forest"><p>Since your world has changed, learn more about your world. Travel so that you mini-map updates and so that you know how your world has changed.</p><input type="checkbox"></td>
+			<td><img id="checklist" src="MythrilOre.png" alt="MythrilOre"><p>Just like before, your next priority is mining. Most of your best weapon options will come from the caves, though it can most certainly be dangerous.<br>You can discover many minerals and abandonded houses that can get you many different useful items. You should also remember to upgrade your pickaxe with your resources, some minerals may be harder too mine than others.</p><input type="checkbox"></td>
 		</tr>	
 	</table>
 </div>	
@@ -128,23 +128,19 @@
 			<th colspan="6"><h2>Notable Items</h2></th>
 		</tr>
 		<tr>
-			<td><img id="nota" src="Platinum_Pickaxe.webp" alt="Platinum_Pickaxe"><img id="nota" src="Gold_Pickaxe.webp" alt="Gold_Pickaxe"><p class="nota">Platinum/Gold Pickaxe</p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Platinum_armor.webp" alt="Platinum_armor"><img id="nota" src="Gold_armor.webp" alt="Gold_armor"><p class="nota">Platinum/Gold Armor</p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Band_of_Regeneration.webp" alt="Band_of_Regeneration"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Band_of_Regeneration" target="_blank">Band of Regeneration</a></p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Hermes_Boots.webp" alt="Hermes_Boots"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Hermes_Boots" target="_blank">Hermes Boots</a></p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Cloud_in_a_Bottle.webp" alt="Cloud_in_a_Bottle"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Cloud_in_a_Bottle" target="_blank">Cloud in a Bottle</a></p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Starfury.webp" alt="Starfury"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Starfury" target="_blank">Starfury</a></p><input class="nota" type="checkbox"></td>			
+			<td><img id="nota" src="Titanium_Drill.webp" alt="Titanium_Drill"><img id="nota" src="Adamantite_Drill.webp" alt="Adamantite_Drill"><p class="nota">Titanium/Adamantite Drill</p><input class="nota" type="checkbox"></td>
+			<td><img id="nota" src="Titanium_armor.webp" alt="Titanium_armor"><img id="nota" src="Adamantite_armor.webp" alt="Adamantite_armor"><p class="nota">Titanium/Adamantite Armor</p><input class="nota" type="checkbox"></td>	
+			<td><img id="nota" src="Titanium_Sword.webp" alt="Titanium_Sword"><img id="nota" src="Adamantite_Sword.webp" alt="Adamantite_Sword"><p class="nota">Titanium/Adamantite Sword</p><input class="nota" type="checkbox"></td>	
+			<td><img id="nota" src="Pwnhammer.webp" alt="Pwnhammer"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Pwnhammer" target="_blank">Pwnhammer</a></p><input class="nota" type="checkbox"></td>			
 		</tr>
 		<tr>
 			<th colspan="6"><h2>Crafting</h2></th>
 		</tr>
 		<tr>
-			<td><p>10x Gold/Platinum Bar</p><img id="nota" src="Gold_Bar.webp" alt="gold"><img id="nota" src="Platinum_Bar.webp" alt="platinum"><br><p>4x Wood</p><img id="nota" src="Wood.webp" alt="wood"></td>
-			<td><p>75x Gold/Platinum Bar</p><img id="nota" src="Gold_Bar.webp" alt="gold"><img id="nota" src="Platinum_Bar.webp" alt="platinum"></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Sky Island Chests</p></td>
+			<td><p>18x Adamantite/Titanium Bar</p><img id="nota" src="Adamantite_Bar.webp" alt="Adamantite_Bar"><img id="nota" src="Titanium_Bar.webp" alt="Titanium_Bar"></td>
+			<td><p>78x Adamantite/Titanium Bar</p><img id="nota" src="Adamantite_Bar.webp" alt="Adamantite_Bar"><img id="nota" src="Titanium_Bar.webp" alt="Titanium_Bar"></td>
+			<td><p>12x Adamantite/Titanium Bar</p><img id="nota" src="Adamantite_Bar.webp" alt="Adamantite_Bar"><img id="nota" src="Titanium_Bar.webp" alt="Titanium_Bar"></td>
+			<td ><p>Dropped by Wall of Flesh</p><img id="nota" src="Map_Icon_Wall_of_Flesh.webp" alt="Wall_of_Flesh"></td>
 		</tr>				
 	</table>
 	<table>
@@ -168,15 +164,15 @@
 			<th><h2>Notable NPCs</h2></th>
 		</tr>
 		<tr>
-			<td><img id="npc" src="Map_Icon_Dryad.webp" alt="Dryad"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Dryad" target="_blank">Dryad</p><input class="nota" type="checkbox"></td>	
+			<td><p>None</p></td>
 		</tr>
 	</table>	
 	<table>
 		<tr>
-			<th colspan="2"><h2>Notable Bosses</h2></th>
+			<th colspan="2"><h2>Notable Bosses/Enemies</h2></th>
 		</tr>
 		<tr>
-			<td><img id="npc" src="Eye_of_Cthulhu_(Phase_1).gif" alt="Eye_of_Cthulhu"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Eye_of_Cthulhu" target="_blank">Eye of Cthulhu</a></p><input class="nota" type="checkbox"></td>
+			<td><p>None</p></td>
 		</tr>
 	</table>
 </div>	
