--- a/melee3.html
+++ b/melee3.html
@@ -117,8 +117,8 @@
 		</tr>
 		<tr>
 			<td><img id="checklist"src="Corrupt_Desert_Biome.webp" alt="Corruption"><p>Next on the to-do list is the Evil Boss. The boss is different for both biomes, but will ultimately end up defeated.</p><input type="checkbox"></td>			
-			<td><img id="checklist"src="29-15-029.jpg" alt="Underground"><p>After building, learn more about your world. Travel so that you mini-map updates and so that you know how your world is structured.</p><input type="checkbox"></td>
-			<td><img id="checklist" src="eater-of-worlds.jpg" alt="Boss_Fight2"><p>Your next priority is simple, mining. Most of your best weapon options will come from the caves, though it can most certainly be dangerous.<br>You can discover many minerals and abandonded houses that can get you many different useful items. You should also remember to upgrade your pickaxe with your resources, some minerals may be harder too mine than others.</p><input type="checkbox"></td>
+			<td><img id="checklist"src="29-15-029.jpg" alt="Underground"><p>Most of your preparations for your next fight involve expanding the width of the care you're fighting in. This will help you avoid incoming attacks.</p><input type="checkbox"></td>
+			<td><img id="checklist" src="eater-of-worlds.jpg" alt="Boss_Fight2"><p>To summon your next boss, you must destroy 3 Shadow Orbs. These orbs are spread out through the underground of the evil biomes.</p><input type="checkbox"></td>
 		</tr>	
 	</table>
 </div>	
@@ -130,9 +130,6 @@
 		<tr>
 			<td><img id="nota" src="Nightmare_Pickaxe.webp" alt="Nightmare_Pickaxe"><img id="nota" src="Deathbringer_Pickaxe.webp" alt="Deathbringer_Pickaxe"><p class="nota">Nightmare/Deathbringer Pickaxe</p><input class="nota" type="checkbox"></td>
 			<td><img id="nota" src="Shadow_armor.webp" alt="Shadow_armor"><img id="nota" src="Crimson_armor.webp" alt="Crimson_armor"><p class="nota">Shadow/Crimson Armor</p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Band_of_Regeneration.webp" alt="Band_of_Regeneration"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Band_of_Regeneration" target="_blank">Band of Regeneration</a></p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Hermes_Boots.webp" alt="Hermes_Boots"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Hermes_Boots" target="_blank">Hermes Boots</a></p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Cloud_in_a_Bottle.webp" alt="Cloud_in_a_Bottle"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Cloud_in_a_Bottle" target="_blank">Cloud in a Bottle</a></p><input class="nota" type="checkbox"></td>
 			<td><img id="nota" src="Light's_Bane.webp" alt="Light's_Bane"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Light's_Bane" target="_blank">Light's Bane</a></p><input class="nota" type="checkbox"></td>			
 		</tr>
 		<tr>
@@ -141,9 +138,6 @@
 		<tr>
 			<td><p>12x Demonite/Crimtane Bar</p><img id="nota" src="Demonite_Bar.webp" alt="Demonite"><img id="nota" src="Crimtane_Bar.webp" alt="Crimtane"><br><p>6x Shadow Scales/Tissue Samples</p><img id="nota" src="Shadow_Scale.webp" alt="Shadow_Scale"><img id="nota" src="Tissue_Sample.webp" alt="Tissue_Sample"></td>
 			<td><p>60x Demonite/Crimtane Bar</p><img id="nota" src="Demonite_Bar.webp" alt="Demonite"><img id="nota" src="Crimtane_Bar.webp" alt="Crimtane"><br><p>45x Shadow Scales/Tissue Samples</p><img id="nota" src="Shadow_Scale.webp" alt="Shadow_Scale"><img id="nota" src="Tissue_Sample.webp" alt="Tissue_Sample"></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
 			<td><p>10x Demonite</p><img id="nota" src="Demonite_Bar.webp" alt="Demonite"></td>
 		</tr>				
 	</table>
