--- a/melee7.html
+++ b/melee7.html
@@ -116,9 +116,9 @@
 			<th>Boss Fight #5</th>
 		</tr>
 		<tr>
-			<td><img id="checklist"src="maxresdefault.jpg" alt="Night"><p>The best course of action for any class is to start building <a href="https://terraria.wiki.gg/wiki/House" target="_blank">houses.</a> Each house is required to have an area of 60 tiles, a table, and a chair. The shape of the house doesn't matter too much though.</p><input type="checkbox"></td>			
-			<td><img id="checklist"src="Corrupt_Desert_Biome.webp" alt="Corruption"><p>After building, learn more about your world. Travel so that you mini-map updates and so that you know how your world is structured.</p><input type="checkbox"></td>
-			<td><img id="checklist" src="Eye_Of_Cthulhu_Fight.jpg" alt="Boss_Fight"><p>Your next priority is simple, mining. Most of your best weapon options will come from the caves, though it can most certainly be dangerous.<br>You can discover many minerals and abandonded houses that can get you many different useful items. You should also remember to upgrade your pickaxe with your resources, some minerals may be harder too mine than others.</p><input type="checkbox"></td>
+			<td><img id="checklist"src="maxresdefault.jpg" alt="Night"><p>You don't need to do much prep for this, all I'd reccomend doing is setting up an arena like the one you did before, only this time do it in the new Hallow Biome.</p><input type="checkbox"></td>			
+			<td><img id="checklist"src="Corrupt_Desert_Biome.webp" alt="Corruption"><p>This is part of your prep, but next id reccomend getting <a href="https://terraria.wiki.gg/wiki/Wings" target="_blank">Wings.</a>. This will help you drastically in this next fight, so take it as you will.</p><input type="checkbox"></td>
+			<td><img id="checklist" src="QueenSlimeFight.jpg" alt="Boss_Fight"><p>Your next fight is against the Queen Slime. This is a very easy fight, but it can be a bit tricky if you don't know what to do. The Queen Slime will spawn a lot of smaller projectiles and slimes, which is partially why the wings will be helpful.</p><input type="checkbox"></td>
 		</tr>	
 	</table>
 </div>	
@@ -128,18 +128,13 @@
 			<th colspan="6"><h2>Notable Items</h2></th>
 		</tr>
 		<tr>
-			<td><p>Platinum/Gold Pickaxe</p><input class="nota" type="checkbox"></td>
+			<td><p>None</p></td>
 		</tr>
 		<tr>
 			<th colspan="6"><h2>Crafting</h2></th>
 		</tr>
 		<tr>
-			<td><p>10x Gold/Platinum Bar</p><img id="nota" src="Gold_Bar.webp" alt="gold"><img id="nota" src="Platinum_Bar.webp" alt="platinum"><br><p>4x Wood</p><img id="nota" src="Wood.webp" alt="wood"></td>
-			<td><p>75x Gold/Platinum Bar</p><img id="nota" src="Gold_Bar.webp" alt="gold"><img id="nota" src="Platinum_Bar.webp" alt="platinum"></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Sky Island Chests</p></td>
+			<td><p>None</p></td>
 		</tr>				
 	</table>
 	<table>
@@ -147,14 +142,14 @@
 			<th><h2>Notable Items [Expert/Master Mode]</h2></th>
 		</tr>
 		<tr>
-			<td><p>No effect yet.</p></td>
-		</tr>	
+			<td><img id="nota" src="Volatile_Gelatin.webp" alt="Volatile Gelatin"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Volatile_Gelatin" target="_blank">Volatile Gelatin</a></p><input class="nota" type="checkbox"></td>
+		</tr>		
 		<tr>
 			<th><h2>Expert Drop</h2></th>
 		</tr>
 		<tr>
-			<td><p>No bosses fought</p></td>
-		</tr>		
+			<td><img id="npc" src="Queen_Slime.png" alt="Queen Slime"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Queen_Slime" target="_blank">Queen Slime</a></p><input class="nota" type="checkbox"></td>
+		</tr>			
 	</table>
 </div>
 <div class="grid-container">
@@ -163,7 +158,7 @@
 			<th><h2>Notable NPCs</h2></th>
 		</tr>
 		<tr>
-			<td><img id="npc" src="Map_Icon_Dryad.webp" alt="Dryad"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Dryad" target="_blank">Dryad</p><input class="nota" type="checkbox"></td>	
+			<td><p>None</p></td>	
 		</tr>
 	</table>	
 	<table>
@@ -171,7 +166,7 @@
 			<th colspan="2"><h2>Notable Bosses</h2></th>
 		</tr>
 		<tr>
-			<td><img id="npc" src="Eye_of_Cthulhu_(Phase_1).gif" alt="Eye_of_Cthulhu"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Eye_of_Cthulhu" target="_blank">Eye of Cthulhu</a></p><input class="nota" type="checkbox"></td>
+			<td><img id="npc" src="Queen_Slime.png" alt="Queen_Slime"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Queen_Slime" target="_blank">Queen Slime</a></p><input class="nota" type="checkbox"></td>
 		</tr>
 	</table>
 </div>	
