--- a/melee8.html
+++ b/melee8.html
@@ -111,14 +111,14 @@
 	<table>
 		<tr><th colspan="5"><h1>Part Eight: Mech Bosses Melee</h1></th></tr>
 		<tr>
-			<th>Demonic Purge</th>
-			<th>The Evil of the World</th>
-			<th>Boss Fight #6-8</th>
+			<th>Boss Fight #6</th>
+			<th>Boss Fight #7</th>
+			<th>Boss Fight #8</th>						
 		</tr>
 		<tr>
-			<td><img id="checklist"src="maxresdefault.jpg" alt="Night"><p>The best course of action for any class is to start building <a href="https://terraria.wiki.gg/wiki/House" target="_blank">houses.</a> Each house is required to have an area of 60 tiles, a table, and a chair. The shape of the house doesn't matter too much though.</p><input type="checkbox"></td>			
-			<td><img id="checklist"src="Corrupt_Desert_Biome.webp" alt="Corruption"><p>After building, learn more about your world. Travel so that you mini-map updates and so that you know how your world is structured.</p><input type="checkbox"></td>
-			<td><img id="checklist" src="Eye_Of_Cthulhu_Fight.jpg" alt="Boss_Fight"><p>Your next priority is simple, mining. Most of your best weapon options will come from the caves, though it can most certainly be dangerous.<br>You can discover many minerals and abandonded houses that can get you many different useful items. You should also remember to upgrade your pickaxe with your resources, some minerals may be harder too mine than others.</p><input type="checkbox"></td>
+			<td><img id="checklist"src="TwinsFight.jpg" alt="Twins Fight"><p>Not much prep is needed, as you can re-use the same arena you made when you fought the Eye of Cthulhu for these next bosses. The first boss you will fight are the twins. This fight will be very difficult, seeing as there are two enemies you have to fight, but it is possible. But do not worry, if this one is too hard at the moment, you can come back later after defeating a different mech.</p><input type="checkbox"></td>			
+			<td><img id="checklist"src="Wormboss.jpg" alt="Destroyer Fight"><p>Another mech boss you must face is the Destroyer. Although this boss has the most Defense, it might take a while to defeat. Due to it's segments though, the damage output can be quite high.</p><input type="checkbox"></td>
+			<td><img id="checklist" src="Skullboss.jpg" alt="SkeletronPrime Fight"><p>The last mech boss you will fight is Skeletron Prime. This boss is a bit more diff</p><input type="checkbox"></td>
 		</tr>	
 	</table>
 </div>	
