--- a/melee7.html
+++ b/melee7.html
@@ -27,8 +27,8 @@
     <img id="logo2" src="TTLogo.png"
 	    alt="TTLogo"
 	>
-	<h2 id="welcome">Now that you've gotten a handle on things, it's time for you to fight your first boss!</h2>
-	<p id="welcome">The gear you have obtained and the arena you have created will be very useful, now get out there and win!</p>
+	<h2 id="welcome">You know what to do by know, get ready for your next boss!</h2>
+	<p id="welcome">The farther you get, the stronger you'll get too!</p>
   <style>
     table {
       	border-collapse: collapse;
@@ -158,7 +158,7 @@
 			<th><h2>Notable NPCs</h2></th>
 		</tr>
 		<tr>
-			<td><p>None</p></td>	
+			<td><p>None</p><input class="nota" type="checkbox"></td>	
 		</tr>
 	</table>	
 	<table>
