--- a/melee8.html
+++ b/melee8.html
@@ -27,8 +27,8 @@
     <img id="logo2" src="TTLogo.png"
 	    alt="TTLogo"
 	>
-	<h2 id="welcome">Now that you've gotten a handle on things, it's time for you to fight your first boss!</h2>
-	<p id="welcome">The gear you have obtained and the arena you have created will be very useful, now get out there and win!</p>
+	<h2 id="welcome">You know what to do by know, get ready for your next boss!</h2>
+	<p id="welcome">The farther you get, the stronger you'll get too!</p>
   <style>
     table {
       	border-collapse: collapse;
@@ -118,7 +118,7 @@
 		<tr>
 			<td><img id="checklist"src="TwinsFight.jpg" alt="Twins Fight"><p>Not much prep is needed, as you can re-use the same arena you made when you fought the Eye of Cthulhu for these next bosses. The first boss you will fight are the twins. This fight will be very difficult, seeing as there are two enemies you have to fight, but it is possible. But do not worry, if this one is too hard at the moment, you can come back later after defeating a different mech.</p><input type="checkbox"></td>			
 			<td><img id="checklist"src="Wormboss.jpg" alt="Destroyer Fight"><p>Another mech boss you must face is the Destroyer. Although this boss has the most Defense, it might take a while to defeat. Due to it's segments though, the damage output can be quite high.</p><input type="checkbox"></td>
-			<td><img id="checklist" src="Skullboss.jpg" alt="SkeletronPrime Fight"><p>The last mech boss you will fight is Skeletron Prime. This boss is a bit more diff</p><input type="checkbox"></td>
+			<td><img id="checklist" src="Skullboss.jpg" alt="SkeletronPrime Fight"><p>The last mech boss you will fight is Skeletron Prime. This boss is a bit trickier, due to its 5 different points of attack, but you can create patterns of attack to avoid getting hit by him.</p><input type="checkbox"></td>
 		</tr>	
 	</table>
 </div>	
@@ -128,23 +128,19 @@
 			<th colspan="6"><h2>Notable Items</h2></th>
 		</tr>
 		<tr>
-			<td><img id="nota" src="Platinum_Pickaxe.webp" alt="Platinum_Pickaxe"><img id="nota" src="Gold_Pickaxe.webp" alt="Gold_Pickaxe"><p class="nota">Platinum/Gold Pickaxe</p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Platinum_armor.webp" alt="Platinum_armor"><img id="nota" src="Gold_armor.webp" alt="Gold_armor"><p class="nota">Platinum/Gold Armor</p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Band_of_Regeneration.webp" alt="Band_of_Regeneration"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Band_of_Regeneration" target="_blank">Band of Regeneration</a></p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Hermes_Boots.webp" alt="Hermes_Boots"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Hermes_Boots" target="_blank">Hermes Boots</a></p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Cloud_in_a_Bottle.webp" alt="Cloud_in_a_Bottle"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Cloud_in_a_Bottle" target="_blank">Cloud in a Bottle</a></p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Starfury.webp" alt="Starfury"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Starfury" target="_blank">Starfury</a></p><input class="nota" type="checkbox"></td>			
+			<td><img id="nota" src="Drax.webp" alt="Drax"><p class="nota">Drax</p><input class="nota" type="checkbox"></td>
+			<td><img id="nota" src="Hallowed_armor.webp" alt="Hallowed_armor"><img id="nota"></p>Hallowed Armor</p><input class="nota" type="checkbox"></td>	
+			<td><img id="nota" src="Excalibur.webp" alt="Excalibur"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Excalibur" target="_blank">Excalibur</a></p><input class="nota" type="checkbox"></td>
+			<td><img id="nota" src="Life_Fruit.webp" alt="Life Fruit"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Life_Fruit" target="_blank">20x Life Fruit</a></p><input class="nota" type="checkbox"></td>			
 		</tr>
 		<tr>
 			<th colspan="6"><h2>Crafting</h2></th>
 		</tr>
 		<tr>
-			<td><p>10x Gold/Platinum Bar</p><img id="nota" src="Gold_Bar.webp" alt="gold"><img id="nota" src="Platinum_Bar.webp" alt="platinum"><br><p>4x Wood</p><img id="nota" src="Wood.webp" alt="wood"></td>
-			<td><p>75x Gold/Platinum Bar</p><img id="nota" src="Gold_Bar.webp" alt="gold"><img id="nota" src="Platinum_Bar.webp" alt="platinum"></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Sky Island Chests</p></td>
+			<td><p>18x Hallowed Bar</p><img id="nota" src="Hallowed_Bar.webp" alt="hallowed bar"><p>Soul of Sight</p><img id="nota" src="Soul_of_Sight.gif" alt="Soul of Sight"><p>Soul of Might</p><img id="nota" src="Soul_of_Might.gif" alt="Soul of Might"><p>Soul of Fright</p><img id="nota" src="Soul_of_Fright.gif" alt="Soul of Fright"></td>
+			<td><p>54x Hallowed Bar</p><img id="nota" src="Hallowed_Bar.webp" alt="hallowed bar"></td>
+			<td><p>12x Hallowed Bar</p><img id="nota" src="Hallowed_Bar.webp" alt="hallowed bar"></td>
+			<td><p>Obtainable after defeating any Mech Boss,<br>found in the underground jungle.</p></td>
 		</tr>				
 	</table>
 	<table>
@@ -168,15 +164,17 @@
 			<th><h2>Notable NPCs</h2></th>
 		</tr>
 		<tr>
-			<td><img id="npc" src="Map_Icon_Dryad.webp" alt="Dryad"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Dryad" target="_blank">Dryad</p><input class="nota" type="checkbox"></td>	
+			<td><p class="nota">None</p></td>	
 		</tr>
 	</table>	
 	<table>
 		<tr>
-			<th colspan="2"><h2>Notable Bosses</h2></th>
+			<th colspan="3"><h2>Notable Bosses</h2></th>
 		</tr>
 		<tr>
-			<td><img id="npc" src="Eye_of_Cthulhu_(Phase_1).gif" alt="Eye_of_Cthulhu"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Eye_of_Cthulhu" target="_blank">Eye of Cthulhu</a></p><input class="nota" type="checkbox"></td>
+			<td><img id="nota" src="150px-Twins_(first_form).gif" alt="Twins"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Twins" target="_blank">Twins</a></p><input class="nota" type="checkbox"></td>
+			<td><img id="nota" src="The_Destroyer.png" alt="The Destroyer"><p class="nota"><a href="https://terraria.wiki.gg/wiki/The_Destroyer" target="_blank">The Destroyer</a></p><input class="nota" type="checkbox"></td>
+			<td><img id="nota" src="Skeletron_Prime_head.gif" alt="Skeletron Prime"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Skeletron_Prime" target="_blank">Skeletron Prime</a></p><input class="nota" type="checkbox"></td>
 		</tr>
 	</table>
 </div>	
