--- a/melee9.html
+++ b/melee9.html
@@ -27,8 +27,8 @@
     <img id="logo2" src="TTLogo.png"
 	    alt="TTLogo"
 	>
-	<h2 id="welcome">Now that you've gotten a handle on things, it's time for you to fight your first boss!</h2>
-	<p id="welcome">The gear you have obtained and the arena you have created will be very useful, now get out there and win!</p>
+	<h2 id="welcome">You know what to do by know, get ready for your next boss!</h2>
+	<p id="welcome">The farther you get, the stronger you'll get too!</p>
   <style>
     table {
       	border-collapse: collapse;
@@ -118,11 +118,11 @@
 			<th>Boss Fight #10</th>
 		</tr>
 		<tr>
-			<td><img id="checklist"src="maxresdefault.jpg" alt="Night"><p>The best course of action for any class is to start building <a href="https://terraria.wiki.gg/wiki/House" target="_blank">houses.</a> Each house is required to have an area of 60 tiles, a table, and a chair. The shape of the house doesn't matter too much though.</p><input type="checkbox"></td>			
-			<td><img id="checklist"src="Corrupt_Desert_Biome.webp" alt="Corruption"><p>After building, learn more about your world. Travel so that you mini-map updates and so that you know how your world is structured.</p><input type="checkbox"></td>
-			<td><img id="checklist"src="Corrupt_Desert_Biome.webp" alt="Corruption"><p>After building, learn more about your world. Travel so that you mini-map updates and so that you know how your world is structured.</p><input type="checkbox"></td>
-			<td><img id="checklist" src="Eye_Of_Cthulhu_Fight.jpg" alt="Boss_Fight"><p>Your next priority is simple, mining. Most of your best weapon options will come from the caves, though it can most certainly be dangerous.<br>You can discover many minerals and abandonded houses that can get you many different useful items. You should also remember to upgrade your pickaxe with your resources, some minerals may be harder too mine than others.</p><input type="checkbox"></td>			
-			<td><img id="checklist" src="Eye_Of_Cthulhu_Fight.jpg" alt="Boss_Fight"><p>Your next priority is simple, mining. Most of your best weapon options will come from the caves, though it can most certainly be dangerous.<br>You can discover many minerals and abandonded houses that can get you many different useful items. You should also remember to upgrade your pickaxe with your resources, some minerals may be harder too mine than others.</p><input type="checkbox"></td>
+			<td><img id="checklist"src="PlanteraBulb.jpg" alt="Plantera Bulb"><p>Your next fight will take place in the jungle. This fight might be a little difficult, but I have faith in you.</p><input type="checkbox"></td>
+			<td><img id="checklist"src="Plantera_in_the_jungle.webp" alt="Plantera"><p>Plantera will move around with it's tendrils, and also mainly try to shoot projectiles at you. It's essential that you dodge these, as they will inflict debuffs on you.</p><input type="checkbox"></td>
+			<td><img id="checklist"src="JungleTemple.png" alt="Jungle Temple"><p>You will obtain a key from plantera, and using it you will be able to enter the jungle temple. It might take a while to find it, but you'll be able to tell when you do.</p><input type="checkbox"></td>
+			<td><img id="checklist" src="JungleTempleMap.png" alt="Temple Maps"><p>Once you find the temple, it might take a while to get to the end of it. It is filled with deadly traps and enemies, so you should take your time and traverse it carefully.</p><input type="checkbox"></td>			
+			<td><img id="checklist" src="dodge-jumps.jpg" alt="Golem"><p>Golem is a fairly easy boss, just make sure to get distance when needed and avoid it's projectiles.</p><input type="checkbox"></td>
 		</tr>	
 	</table>
 </div>	
@@ -132,23 +132,19 @@
 			<th colspan="6"><h2>Notable Items</h2></th>
 		</tr>
 		<tr>
-			<td><img id="nota" src="Platinum_Pickaxe.webp" alt="Platinum_Pickaxe"><img id="nota" src="Gold_Pickaxe.webp" alt="Gold_Pickaxe"><p class="nota">Platinum/Gold Pickaxe</p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Platinum_armor.webp" alt="Platinum_armor"><img id="nota" src="Gold_armor.webp" alt="Gold_armor"><p class="nota">Platinum/Gold Armor</p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Band_of_Regeneration.webp" alt="Band_of_Regeneration"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Band_of_Regeneration" target="_blank">Band of Regeneration</a></p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Hermes_Boots.webp" alt="Hermes_Boots"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Hermes_Boots" target="_blank">Hermes Boots</a></p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Cloud_in_a_Bottle.webp" alt="Cloud_in_a_Bottle"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Cloud_in_a_Bottle" target="_blank">Cloud in a Bottle</a></p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Starfury.webp" alt="Starfury"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Starfury" target="_blank">Starfury</a></p><input class="nota" type="checkbox"></td>			
+			<td><img id="nota" src="Chlorophyte_Drill.webp" alt="Chlorophyte_Drill"><p class="nota">Chlorophyte Drill</p><input class="nota" type="checkbox"></td>
+			<td><img id="nota" src="Chlorophyte_armor.webp" alt="Chlorophyte_armor"><p class="nota">Chlorophyte Armor</p><input class="nota" type="checkbox"></td>	
+			<td><img id="nota" src="True_Excalibur.webp" alt="True_Excalibur"><p class="nota"><a href="https://terraria.wiki.gg/wiki/True_Excalibur" target="_blank">True Excalibur</a></p><input class="nota" type="checkbox"></td>			
+			<td><img id="nota" src="Picksaw.webp" alt="Picksaw"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Picksaw" target="_blank">Picksaw</a></p><input class="nota" type="checkbox"></td>					
 		</tr>
 		<tr>
 			<th colspan="6"><h2>Crafting</h2></th>
 		</tr>
 		<tr>
-			<td><p>10x Gold/Platinum Bar</p><img id="nota" src="Gold_Bar.webp" alt="gold"><img id="nota" src="Platinum_Bar.webp" alt="platinum"><br><p>4x Wood</p><img id="nota" src="Wood.webp" alt="wood"></td>
-			<td><p>75x Gold/Platinum Bar</p><img id="nota" src="Gold_Bar.webp" alt="gold"><img id="nota" src="Platinum_Bar.webp" alt="platinum"></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Sky Island Chests</p></td>
+			<td><p>18x Chlorophyte Bar</p><img id="nota" src="Chlorophyte_Bar.webp" alt="chlorophyte bar"></td>
+			<td><p>78x Chlorophyte Bar</p><img id="nota" src="Chlorophyte_Bar.webp" alt="chlorophyte bar"></td>
+			<td><p>Excalibur</p><img id="nota" src="Excalibur.webp" alt="Excalibur"><p>24x Chlorophyte Bar</p><img id="nota" src="Chlorophyte_Bar.webp" alt="chlorophyte bar"></td>
+			<td ><p>Dropped by Golem</p><img id="nota" src="Map_Icon_Golem.webp" alt="Golem"></td>
 		</tr>				
 	</table>
 	<table>
@@ -172,7 +168,7 @@
 			<th><h2>Notable NPCs</h2></th>
 		</tr>
 		<tr>
-			<td><img id="npc" src="Map_Icon_Dryad.webp" alt="Dryad"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Dryad" target="_blank">Dryad</p><input class="nota" type="checkbox"></td>	
+			<td><p class="nota">None</p></td>	
 		</tr>
 	</table>	
 	<table>
@@ -180,7 +176,8 @@
 			<th colspan="2"><h2>Notable Bosses</h2></th>
 		</tr>
 		<tr>
-			<td><img id="npc" src="Eye_of_Cthulhu_(Phase_1).gif" alt="Eye_of_Cthulhu"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Eye_of_Cthulhu" target="_blank">Eye of Cthulhu</a></p><input class="nota" type="checkbox"></td>
+			<td><img id="npc" src="Plantera_(First_form).gif" alt="Plantera"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Plantera" target="_blank">Plantera</a></p><input class="nota" type="checkbox"></td>
+			<td><img id="npc" src="Golem.png" alt="Golem"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Golem" target="_blank">Golem</a></p><input class="nota" type="checkbox"></td>
 		</tr>
 	</table>
 </div>	
