--- a/melee10.html
+++ b/melee10.html
@@ -27,8 +27,8 @@
     <img id="logo2" src="TTLogo.png"
 	    alt="TTLogo"
 	>
-	<h2 id="welcome">Now that you've gotten a handle on things, it's time for you to fight your first boss!</h2>
-	<p id="welcome">The gear you have obtained and the arena you have created will be very useful, now get out there and win!</p>
+	<h2 id="welcome">You've made it to the end!</h2>
+	<p id="welcome">Good luck, as your impending doom approaches</p>
   <style>
     table {
       	border-collapse: collapse;
@@ -104,8 +104,13 @@
 		td > img#checklist {
 			display: inline;
       		padding: 5px;
-    }
-}
+    	}
+		img#npc2 {
+			width: 30%;
+			height: 30%;
+			margin: auto;
+    	}		
+	}
 </style>
 <div class="grid-container">
 	<table>
@@ -118,11 +123,11 @@
 			<th>The End</th>
 		</tr>
 		<tr>
-			<td><img id="checklist"src="maxresdefault.jpg" alt="Night"><p>The best course of action for any class is to start building <a href="https://terraria.wiki.gg/wiki/House" target="_blank">houses.</a> Each house is required to have an area of 60 tiles, a table, and a chair. The shape of the house doesn't matter too much though.</p><input type="checkbox"></td>			
-			<td><img id="checklist"src="Corrupt_Desert_Biome.webp" alt="Corruption"><p>After building, learn more about your world. Travel so that you mini-map updates and so that you know how your world is structured.</p><input type="checkbox"></td>
-			<td><img id="checklist"src="Corrupt_Desert_Biome.webp" alt="Corruption"><p>After building, learn more about your world. Travel so that you mini-map updates and so that you know how your world is structured.</p><input type="checkbox"></td>
-			<td><img id="checklist" src="Eye_Of_Cthulhu_Fight.jpg" alt="Boss_Fight"><p>Your next priority is simple, mining. Most of your best weapon options will come from the caves, though it can most certainly be dangerous.<br>You can discover many minerals and abandonded houses that can get you many different useful items. You should also remember to upgrade your pickaxe with your resources, some minerals may be harder too mine than others.</p><input type="checkbox"></td>			
-			<td><img id="checklist" src="Eye_Of_Cthulhu_Fight.jpg" alt="Boss_Fight"><p>Your next priority is simple, mining. Most of your best weapon options will come from the caves, though it can most certainly be dangerous.<br>You can discover many minerals and abandonded houses that can get you many different useful items. You should also remember to upgrade your pickaxe with your resources, some minerals may be harder too mine than others.</p><input type="checkbox"></td>
+			<td><img id="checklist"src="terraria-four-cultists-in-the-dungeon.avif" alt="Cultists"><p>The finale begins back at the dungeon, where the cultists reside. Slay them to take on your next boss.</p><input type="checkbox"></td>			
+			<td><img id="checklist"src="CultistFight.jpg" alt="Lunatic Cultist"><p>The Cultist is a powerful boss, but shouldn't take too long to defeat. Make sure to avoid his minions, as they are extremely damaging.</p><input type="checkbox"></td>
+			<td><img id="checklist"src="terraria_vortex_pillar_boss_fight_in_the_dark.jpg" alt="Vortex Pillar"><p>After defeating the Cultist, 4 Celestial Pillars will appear. Defeat them and their peons to summon the final boss.</p><input type="checkbox"></td>
+			<td><img id="checklist" src="x1080.jpeg" alt="Moonlord Fight"><p>The final boss will be your hardest challenge yet. Be sure to note be too agressive, as getting too close when you aren't supposed to will ensure your demise.</p><input type="checkbox"></td>			
+			<td><img id="checklist" src="Credits.jpg" alt="Boss_Fight"><p>After you defeat the Moon Lord, you will be the world's savior. Feel free to go back and chack anything you missed befoe, or mess around with the new items the Moon Lord has droped.</p><input type="checkbox"></td>
 		</tr>	
 	</table>
 </div>	
@@ -132,23 +137,17 @@
 			<th colspan="6"><h2>Notable Items</h2></th>
 		</tr>
 		<tr>
-			<td><img id="nota" src="Platinum_Pickaxe.webp" alt="Platinum_Pickaxe"><img id="nota" src="Gold_Pickaxe.webp" alt="Gold_Pickaxe"><p class="nota">Platinum/Gold Pickaxe</p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Platinum_armor.webp" alt="Platinum_armor"><img id="nota" src="Gold_armor.webp" alt="Gold_armor"><p class="nota">Platinum/Gold Armor</p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Band_of_Regeneration.webp" alt="Band_of_Regeneration"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Band_of_Regeneration" target="_blank">Band of Regeneration</a></p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Hermes_Boots.webp" alt="Hermes_Boots"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Hermes_Boots" target="_blank">Hermes Boots</a></p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Cloud_in_a_Bottle.webp" alt="Cloud_in_a_Bottle"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Cloud_in_a_Bottle" target="_blank">Cloud in a Bottle</a></p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Starfury.webp" alt="Starfury"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Starfury" target="_blank">Starfury</a></p><input class="nota" type="checkbox"></td>			
+			<td><img id="nota" src="Solar_Flare_armor.png" alt="Solar_Flare_armor"><img id="nota" src="Solar_Flare_armor.png" alt="Solar_Flare_armor"><p class="nota">Solar Flare Armor</p><input class="nota" type="checkbox"></td>
+			<td><img id="nota" src="Daybreak.png" alt="Daybreak"><p class="nota">Daybreak</p><input class="nota" type="checkbox"></td>	
+			<td><img id="nota" src="Solar_Eruption.webp" alt="Solar_Eruption"><p class="nota">Solar Eruption</p><input class="nota" type="checkbox"></td>	
 		</tr>
 		<tr>
 			<th colspan="6"><h2>Crafting</h2></th>
 		</tr>
 		<tr>
-			<td><p>10x Gold/Platinum Bar</p><img id="nota" src="Gold_Bar.webp" alt="gold"><img id="nota" src="Platinum_Bar.webp" alt="platinum"><br><p>4x Wood</p><img id="nota" src="Wood.webp" alt="wood"></td>
-			<td><p>75x Gold/Platinum Bar</p><img id="nota" src="Gold_Bar.webp" alt="gold"><img id="nota" src="Platinum_Bar.webp" alt="platinum"></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Sky Island Chests</p></td>
+			<td><p>45x Solar Fragments</p><img id="nota" src="Solar_Fragment.png" alt="Solar Fragment"><br><p>36x Luminite Bars</p><img id="nota" src="Luminite_Bar.webp" alt="Luminite Bar"></td>
+			<td><p>18x Solar Fragments</p><img id="nota" src="Solar_Fragment.png" alt="Solar Fragment"></td>
+			<td><p>18x Solar Fragments</p><img id="nota" src="Solar_Fragment.png" alt="Solar Fragment"></td>
 		</tr>				
 	</table>
 	<table>
@@ -172,7 +171,7 @@
 			<th><h2>Notable NPCs</h2></th>
 		</tr>
 		<tr>
-			<td><img id="npc" src="Map_Icon_Dryad.webp" alt="Dryad"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Dryad" target="_blank">Dryad</p><input class="nota" type="checkbox"></td>	
+			<td><p class="nota">None</p></td>	
 		</tr>
 	</table>	
 	<table>
@@ -180,7 +179,8 @@
 			<th colspan="2"><h2>Notable Bosses</h2></th>
 		</tr>
 		<tr>
-			<td><img id="npc" src="Eye_of_Cthulhu_(Phase_1).gif" alt="Eye_of_Cthulhu"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Eye_of_Cthulhu" target="_blank">Eye of Cthulhu</a></p><input class="nota" type="checkbox"></td>
+			<td><img id="npc" src="Lunatic_Cultist.gif" alt="Lunatic_Cultist"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Lunatic_Cultist" target="_blank">Lunatic Cultist</a></p><input class="nota" type="checkbox"></td>
+			<td><img id="npc2" src="Moon_Lord.gif" alt="Moon_Lord"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Moon_Lord" target="_blank">Moon Lord</a></p><input class="nota" type="checkbox"></td>
 		</tr>
 	</table>
 </div>	
