--- a/summon1.html
+++ b/summon1.html
@@ -198,7 +198,7 @@
 	</table>
 </div>	
 	<button>
-		<a href="mage2.html"><p>Next Page</p></a>
+		<a href="summon2.html"><p>Next Page</p></a>
 	</button>
 </body>
 </html>
